force some Locale
Signed-off-by: Olivier Lamy <olamy@apache.org>